# jet1oeil-system-reboot

./: CMakeLists.txt  CPackOptions.cmake.in  README.md  build.sh
cron.d/: daily.in
debian/: postinst.in  prerm.in
scripts/: reboot.sh.in
